--- a/wert-fullstack/package.json
+++ b/wert-fullstack/package.json
@@ -1,14 +1,22 @@
 {
-  "name": "wert-fullstack",
+  "name": "wert-frontend",
   "private": true,
   "scripts": {
-    "install-client": "cd client && npm install",
-    "install-server": "cd server && npm install",
-    "build-client": "cd client && npm run build",
-    "postinstall": "npm run install-client && npm run build-client && npm run install-server",
-    "start": "node server/server.js"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "start": "serve -s dist"
   },
   "dependencies": {
-    "@wert-io/widget-initializer": "^6.8.1"
+    "@wert-io/widget-initializer": "^6.8.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "uuid": "^9.0.0",
+    "serve": "^14.2.0"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-react": "^4.0.0",
+    "vite": "^5.0.0",
+    "typescript": "^5.2.0"
   }
 }
