--- a/wert-fullstack/server/package.json
+++ b/wert-fullstack/server/package.json
@@ -1,20 +1,15 @@
 {
-  "name": "wert-frontend",
+  "name": "wert-server",
+  "version": "1.0.0",
+  "type": "module",
   "private": true,
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "start": "node server.js",
+    "dev": "node server.js"
   },
   "dependencies": {
-    "@wert-io/widget-initializer": "^1.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "uuid": "^9.0.0"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-react": "^4.0.0",
-    "vite": "^5.0.0",
-    "typescript": "^5.2.0"
+    "express": "^4.18.2",
+    "node-fetch": "^3.3.2",
+    "dotenv": "^16.3.1"
   }
 }
